--- a/resume/index.html
+++ b/resume/index.html
@@ -14,7 +14,6 @@
     <!-- V2: Summer Camp 2022 -->
     <!-- END: Versions -->
   </head>
-  <!-- TODO: fix text not being smaller in print version -->
 
   <body
     x-init="console.log('Loaded resume version', version)"
@@ -180,6 +179,34 @@
       <section id="work-experience">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase"> Work Experience </h2>
         <div class="flex flex-col gap-y-1.5">
+          <!-- START: Intramural Sports Lead -->
+          <div class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Intramural Sports Lead</p>
+                <a href="https://asi.fullerton.edu/" target="_blank" class="italic"> ASI Cal State Fullerton </a>
+              </div>
+              <div class="flex flex-col text-right min-w-max">
+                <p class="hidden xs:inline">August 2022 - Present</p>
+                <p class="xs:hidden">Aug. '22 - Pres.</p>
+                <p>Fullerton, CA</p>
+              </div>
+            </div>
+            <ul class="ml-4 list-disc">
+              <li>Oversaw a staff of approximately 40 college students on a nightly basis</li>
+              <li>Interviewed and hired candidates and lead new-hire trainings</li>
+              <li>Created the staff work schedule and conducted biweekly all-staff meetings</li>
+              <li>Assisted patrons via phone, email, and in-person</li>
+              <li>Dealt with conflict between participants and ensured the safety of all patrons and staff</li>
+              <!-- <li>
+                <span>Travelled out-of-state to officiate</span>
+                <a href="https://nirsa.net" target="_blank">NIRSA</a>
+                <span>sanctioned tournaments</span>
+              </li> -->
+            </ul>
+          </div>
+          <!-- END: Intramural Sports Lead -->
+
           <!-- START: DiD Integration -->
           <div x-cloak x-show="version === '1'" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -206,7 +233,7 @@
           </div>
           <!-- END: DiD Integration -->
           <!-- START: Residential Advisor -->
-          <div class="flex flex-col gap-y-1">
+          <div x-cloak x-show="version === '2'" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Residential Advisor (RA)</p>
@@ -249,7 +276,7 @@
           </div>
           <!-- END: Summer Camp Counselor -->
           <!-- START: Intramural Sports Supervisor -->
-          <div class="flex flex-col gap-y-1">
+          <div x-cloak x-show="version === '2'" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Intramural Sports Supervisor</p>
