--- a/resume/index.html
+++ b/resume/index.html
@@ -28,23 +28,23 @@
         <span class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 print:max-w-none print:text-[11px] md:max-w-none">
           <!-- START: Cell Number -->
           <a href="tel:+16618033757" class="flex flex-row gap-x-1">
-            <i class="my-auto fa-solid fa-phone"></i>
+            <i class="fa-solid fa-phone my-auto"></i>
             <span class="my-auto">(661) 803-3757</span>
           </a>
           <!-- END: Cell Number -->
           <span class="hidden print:inline md:inline">|</span>
           <!-- START: Email Address -->
           <a href="mailto:resume@harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
-            <i class="my-auto fa-solid fa-envelope"></i>
+            <i class="fa-solid fa-envelope my-auto"></i>
             <span class="my-auto">resume@harvanchik.me</span>
           </a>
           <!-- END: Email Address -->
           <!-- TODO: hidden until portfolio website complete -->
-          <div x-cloak x-show="version === '1'" class="flex-row hidden space-x-1">
+          <div x-cloak x-show="version === '1'" class="hidden flex-row space-x-1">
             <span class="hidden print:inline md:inline">|</span>
             <!-- START: Online Portfolio -->
             <a href="https://jake.harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
-              <i class="my-auto fa-solid fa-laptop-code"></i>
+              <i class="fa-solid fa-laptop-code my-auto"></i>
               <span class="my-auto">jake.harvanchik.me</span>
             </a>
           </div>
@@ -52,18 +52,18 @@
           <span class="hidden print:inline md:inline">|</span>
           <!-- START: Linked In -->
           <a href="https://www.linkedin.com/in/harvanchik" target="_blank" class="flex flex-row gap-x-1">
-            <i class="my-auto fa-brands fa-linkedin-in"></i>
-            <span class="hidden my-auto print:inline">linkedin.com/in/harvanchik</span>
-            <span class="inline my-auto print:hidden">harvanchik</span>
+            <i class="fa-brands fa-linkedin-in my-auto"></i>
+            <span class="my-auto hidden print:inline">linkedin.com/in/harvanchik</span>
+            <span class="my-auto inline print:hidden">harvanchik</span>
           </a>
           <!-- END: Linked In -->
           <div x-cloak x-show="version === '1'" class="flex flex-row space-x-1">
             <span class="hidden print:inline md:inline">|</span>
             <!-- START: GitHub -->
             <a href="https://github.com/harvanchik" target="_blank" class="flex flex-row gap-x-1">
-              <i class="my-auto fa-brands fa-github"></i>
-              <span class="hidden my-auto print:inline">github.com/harvanchik</span>
-              <span class="inline my-auto print:hidden">harvanchik</span>
+              <i class="fa-brands fa-github my-auto"></i>
+              <span class="my-auto hidden print:inline">github.com/harvanchik</span>
+              <span class="my-auto inline print:hidden">harvanchik</span>
             </a>
           </div>
           <!-- END: GitHub -->
@@ -80,7 +80,7 @@
               <p class="font-bold">Bachelor of Science, Computer Science</p>
               <a href="https://www.fullerton.edu" target="_blank" class="italic"> California State University, Fullerton </a>
             </div>
-            <div class="flex flex-col text-right min-w-max">
+            <div class="flex min-w-max flex-col text-right">
               <p class="hidden xs:inline">Expected Dec. 2023</p>
               <p class="xs:hidden">Exp. Dec. '23</p>
               <p>Fullerton, CA</p>
@@ -94,7 +94,7 @@
       <section x-cloak x-show="version === '1'" id="related-courses">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Related Courses </h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="w-full ml-4 list-disc columns-2 gap-x-20">
+          <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
             <li class="min-w-max">
               <span class="hidden min-w-max xs:inline">Object-Oriented Programming</span>
               <span class="xs:hidden">Object Oriented Program.</span>
@@ -126,7 +126,7 @@
       <section x-cloak x-show="version === '1'" id="technical-skills">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Technical Skills </h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="w-full ml-4 list-disc columns-2 gap-x-20">
+          <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
             <li>
               <span class="font-bold">Languages:</span>
               <a href="https://www.java.com" target="_blank">Java,</a>
@@ -175,6 +175,28 @@
       </section>
       <!-- END: Technical Skills -->
 
+      <!-- START: Soft Skills -->
+      <section x-cloak x-show="version === '1'" id="technical-skills">
+        <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Soft Skills </h2>
+        <div class="flex flex-col gap-y-1.5">
+          <ul class="ml-4 w-full list-disc columns-4 gap-x-20">
+            <li>Adaptable</li>
+            <li>Cooperative</li>
+            <li>Organized</li>
+            <li>Open-minded</li>
+            <li>Reliable</li>
+            <li>Logical</li>
+            <li>Professional</li>
+            <li>Disciplined</li>
+            <li>Responsible</li>
+            <li>Patient</li>
+            <li>Versatile</li>
+            <li>Trustworthy</li>
+          </ul>
+        </div>
+      </section>
+      <!-- END: Soft Skills -->
+
       <!-- START: Work Experience -->
       <section id="work-experience">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase"> Work Experience </h2>
@@ -186,7 +208,7 @@
                 <p class="font-bold">Intramural Sports Lead</p>
                 <a href="https://asi.fullerton.edu/" target="_blank" class="italic"> ASI Cal State Fullerton </a>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">August 2022 - Present</p>
                 <p class="xs:hidden">Aug. '22 - Pres.</p>
                 <p>Fullerton, CA</p>
@@ -214,7 +236,7 @@
                 <p class="font-bold">Junior Software Developer</p>
                 <a href="https://didintegration.com" target="_blank" class="italic">DiD Integration, Inc.</a>
               </div>
-              <div class="flex flex-col text-right font-xs sm:font-sm min-w-max">
+              <div class="font-xs sm:font-sm flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">July 2020 - November 2021</p>
                 <p class="xs:hidden">July '20 - Nov. '21</p>
                 <p>Valencia, CA</p>
@@ -239,7 +261,7 @@
                 <p class="font-bold">Residential Advisor (RA)</p>
                 <a href="https://reslife.okstate.edu" target="_blank" class="italic"> Housing and Residential Life </a>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">August 2019 - March 2020</p>
                 <p class="xs:hidden">Aug. '19 - March '20</p>
                 <p>Stillwater, OK</p>
@@ -260,7 +282,7 @@
                 <p class="font-bold">Summer Camp Counselor</p>
                 <a href="https://www.cadence-education.com/locations/ca/valencia/651" target="_blank" class="italic"> Cadence Academy (Sunshine) </a>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">June 2019 - August 2019</p>
                 <p class="xs:hidden">June '19 - Aug. '19</p>
                 <p>Valencia, CA</p>
@@ -282,7 +304,7 @@
                 <p class="font-bold">Intramural Sports Supervisor</p>
                 <a href="https://wellness.okstate.edu/competitive-sports" target="_blank" class="italic"> Department of Wellness </a>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">August 2018 - March 2020</p>
                 <p class="xs:hidden">Aug. '18 - March '20</p>
                 <p>Stillwater, OK</p>
@@ -315,7 +337,7 @@
                 <p class="font-bold">National Flag Football Official</p>
                 <a href="https://nirsa.net/" target="_blank" class="italic"> National Intramural-Recreational Sports Association (NIRSA) </a>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">January 2020</p>
                 <p class="xs:hidden">Jan. '20</p>
               </div>
@@ -358,7 +380,7 @@
                 <p class="font-bold">Blockey Hockey</p>
                 <p class="italic"> Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, GitHub Pages </p>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">Since December 2014</p>
                 <p class="xs:hidden">Since Dec. '14</p>
               </div>
@@ -389,7 +411,7 @@
                   <a href="https://github.com/tiberiuzuld/angular-gridster2" target="_blank">Gridster API</a>
                 </p>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">August - November 2021</p>
                 <p class="xs:hidden">Aug. - Nov. '21</p>
               </div>
