--- a/resume/index.html
+++ b/resume/index.html
@@ -14,7 +14,6 @@
     <!-- V2: Summer Camp 2022 -->
     <!-- END: Versions -->
   </head>
-  <!-- TODO: fix text not being smaller in print version -->
 
   <body
     x-init="console.log('Loaded resume version', version)"
@@ -29,23 +28,23 @@
         <span class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 print:max-w-none print:text-[11px] md:max-w-none">
           <!-- START: Cell Number -->
           <a href="tel:+16618033757" class="flex flex-row gap-x-1">
-            <i class="my-auto fa-solid fa-phone"></i>
+            <i class="fa-solid fa-phone my-auto"></i>
             <span class="my-auto">(661) 803-3757</span>
           </a>
           <!-- END: Cell Number -->
           <span class="hidden print:inline md:inline">|</span>
           <!-- START: Email Address -->
           <a href="mailto:resume@harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
-            <i class="my-auto fa-solid fa-envelope"></i>
+            <i class="fa-solid fa-envelope my-auto"></i>
             <span class="my-auto">resume@harvanchik.me</span>
           </a>
           <!-- END: Email Address -->
           <!-- TODO: hidden until portfolio website complete -->
-          <div x-cloak x-show="version === '1'" class="flex-row hidden space-x-1">
+          <div x-cloak x-show="version === '1'" class="hidden flex-row space-x-1">
             <span class="hidden print:inline md:inline">|</span>
             <!-- START: Online Portfolio -->
             <a href="https://jake.harvanchik.me" target="_blank" class="flex flex-row gap-x-1">
-              <i class="my-auto fa-solid fa-laptop-code"></i>
+              <i class="fa-solid fa-laptop-code my-auto"></i>
               <span class="my-auto">jake.harvanchik.me</span>
             </a>
           </div>
@@ -53,18 +52,18 @@
           <span class="hidden print:inline md:inline">|</span>
           <!-- START: Linked In -->
           <a href="https://www.linkedin.com/in/harvanchik" target="_blank" class="flex flex-row gap-x-1">
-            <i class="my-auto fa-brands fa-linkedin-in"></i>
-            <span class="hidden my-auto print:inline">linkedin.com/in/harvanchik</span>
-            <span class="inline my-auto print:hidden">harvanchik</span>
+            <i class="fa-brands fa-linkedin-in my-auto"></i>
+            <span class="my-auto hidden print:inline">linkedin.com/in/harvanchik</span>
+            <span class="my-auto inline print:hidden">harvanchik</span>
           </a>
           <!-- END: Linked In -->
           <div x-cloak x-show="version === '1'" class="flex flex-row space-x-1">
             <span class="hidden print:inline md:inline">|</span>
             <!-- START: GitHub -->
             <a href="https://github.com/harvanchik" target="_blank" class="flex flex-row gap-x-1">
-              <i class="my-auto fa-brands fa-github"></i>
-              <span class="hidden my-auto print:inline">github.com/harvanchik</span>
-              <span class="inline my-auto print:hidden">harvanchik</span>
+              <i class="fa-brands fa-github my-auto"></i>
+              <span class="my-auto hidden print:inline">github.com/harvanchik</span>
+              <span class="my-auto inline print:hidden">harvanchik</span>
             </a>
           </div>
           <!-- END: GitHub -->
@@ -81,9 +80,9 @@
               <p class="font-bold">Bachelor of Science, Computer Science</p>
               <a href="https://www.fullerton.edu" target="_blank" class="italic"> California State University, Fullerton </a>
             </div>
-            <div class="flex flex-col text-right min-w-max">
-              <p class="hidden xs:inline">Expected May 2023</p>
-              <p class="xs:hidden">Exp. May '23</p>
+            <div class="flex min-w-max flex-col text-right">
+              <p class="hidden xs:inline">Expected Dec. 2023</p>
+              <p class="xs:hidden">Exp. Dec. '23</p>
               <p>Fullerton, CA</p>
             </div>
           </div>
@@ -95,7 +94,7 @@
       <section x-cloak x-show="version === '1'" id="related-courses">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Related Courses </h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="w-full ml-4 list-disc columns-2 gap-x-20">
+          <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
             <li class="min-w-max">
               <span class="hidden min-w-max xs:inline">Object-Oriented Programming</span>
               <span class="xs:hidden">Object Oriented Program.</span>
@@ -106,13 +105,18 @@
               <span class="italic"> | C++</span>
             </li>
             <li class="min-w-max">
-              <span>Video Game Design</span>
-              <span class="italic"> | Unity/C#</span>
+              <span>Software Engineering</span>
+              <span class="italic"> | TypeScript, HTML, CSS</span>
             </li>
-            <li class="min-w-max">Calculus I, II, III</li>
-            <li class="min-w-max">Statistics & Discrete Math</li>
-            <li class="hidden min-w-max xs:list-item"> Visual Basic for Applications </li>
-            <li class="min-w-max xs:hidden">Visual Basic for Apps.</li>
+            <li class="min-w-max">Python Programming</li>
+            <li class="min-w-max">
+              <span>Video Game Design</span>
+              <span class="italic"> | Unity, C#</span>
+            </li>
+            <li class="min-w-max">Calculus I-III, Stats, Discrete Math</li>
+
+            <!-- <li class="hidden min-w-max xs:list-item"> Visual Basic for Applications </li> -->
+            <!-- <li class="min-w-max xs:hidden">Visual Basic for Apps.</li> -->
           </ul>
         </div>
       </section>
@@ -122,7 +126,7 @@
       <section x-cloak x-show="version === '1'" id="technical-skills">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Technical Skills </h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="w-full ml-4 list-disc columns-2 gap-x-20">
+          <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
             <li>
               <span class="font-bold">Languages:</span>
               <a href="https://www.java.com" target="_blank">Java,</a>
@@ -142,6 +146,8 @@
               <span class="font-bold">Tech:</span>
               <a href="https://angular.io" target="_blank">Angular,</a>
               <a href="https://alpinejs.dev" target="_blank">Alpine,</a>
+              <a href="https://vuejs.org/" target="_blank">VueJS,</a>
+              <a href="https://v3.nuxtjs.org/" target="_blank">Nuxt3,</a>
               <a href="https://gulpjs.com" target="_blank">Gulp,</a>
               <a href="https://www.mysql.com" target="_blank">MySQL,</a>
               <a href="https://spring.io" target="_blank">Spring,</a>
@@ -152,16 +158,16 @@
               <a href="https://www.microsoft.com/windows" target="_blank">Windows,</a>
               <a href="https://www.apple.com/mac" target="_blank">Mac,</a>
               <a href="https://git-scm.com" target="_blank">Git,</a>
-              <a href="https://github.com" target="_blank">Github,</a>
-              <a href="https://desktop.github.com" target="_blank">Github Desktop,</a>
+              <a href="https://github.com" target="_blank">GitHub,</a>
+              <a href="https://desktop.giHub.com" target="_blank">GitHub Desktop,</a>
               <a href="https://www.heroku.com" target="_blank">Heroku</a>
             </li>
             <li>
               <span class="font-bold">Other:</span>
               <a href="https://code.visualstudio.com/" target="_blank">VS Code,</a>
               <a href="https://www.jetbrains.com/idea/" target="_blank">IntelliJ,</a>
+              <a href="https://workspace.google.com/features" target="_blank">Google Workspace,</a>
               <a href="https://www.office.com" target="_blank">Microsoft Office,</a>
-              <a href="https://workspace.google.com/features" target="_blank">Google Sheets/Docs/Slides,</a>
               <a href="https://www.adobe.com/creativecloud.html" target="_blank">Adobe Products</a>
             </li>
           </ul>
@@ -169,10 +175,55 @@
       </section>
       <!-- END: Technical Skills -->
 
+      <!-- START: Soft Skills -->
+      <section x-cloak x-show="version === '1'" id="technical-skills">
+        <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider"> Soft Skills </h2>
+        <div class="flex flex-col gap-y-1.5">
+          <ul class="ml-4 w-full list-disc columns-4 gap-x-20">
+            <li>Adaptable</li>
+            <li>Cooperative</li>
+            <li>Organized</li>
+            <li>Open-minded</li>
+            <li>Reliable</li>
+            <li>Logical</li>
+            <li>Professional</li>
+            <li>Disciplined</li>
+            <li>Responsible</li>
+            <li>Patient</li>
+            <li>Versatile</li>
+            <li>Trustworthy</li>
+          </ul>
+        </div>
+      </section>
+      <!-- END: Soft Skills -->
+
       <!-- START: Work Experience -->
       <section id="work-experience">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase"> Work Experience </h2>
         <div class="flex flex-col gap-y-1.5">
+          <!-- START: Intramural Sports Lead -->
+          <div class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Intramural Sports Lead</p>
+                <a href="https://asi.fullerton.edu/" target="_blank" class="italic"> ASI Cal State Fullerton </a>
+              </div>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">August 2022 - Present</p>
+                <p class="xs:hidden">Aug. '22 - Pres.</p>
+                <p>Fullerton, CA</p>
+              </div>
+            </div>
+            <ul class="ml-4 list-disc">
+              <li>Oversaw a staff of approximately 40 college students on a nightly basis</li>
+              <li>Interviewed and hired candidates and led new-hire trainings</li>
+              <li>Created the staff work schedule and conducted biweekly all-staff meetings</li>
+              <!-- <li>Assisted patrons via phone, email, and in-person</li> -->
+              <li>Dealt with conflict between participants and ensured the safety of all patrons and staff</li>
+            </ul>
+          </div>
+          <!-- END: Intramural Sports Lead -->
+
           <!-- START: DiD Integration -->
           <div x-cloak x-show="version === '1'" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -180,7 +231,7 @@
                 <p class="font-bold">Junior Software Developer</p>
                 <a href="https://didintegration.com" target="_blank" class="italic">DiD Integration, Inc.</a>
               </div>
-              <div class="flex flex-col text-right font-xs sm:font-sm min-w-max">
+              <div class="font-xs sm:font-sm flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">July 2020 - November 2021</p>
                 <p class="xs:hidden">July '20 - Nov. '21</p>
                 <p>Valencia, CA</p>
@@ -189,7 +240,7 @@
             <ul class="ml-4 list-disc">
               <li>
                 Redesigned the
-                <a href="https://agknowledge.com" target="_blank"> subsidiary website </a>
+                <a href="https://agknowledge.com" target="_blank"> subsidiary website</a>
                 from scratch using
                 <a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a>
               </li>
@@ -199,13 +250,13 @@
           </div>
           <!-- END: DiD Integration -->
           <!-- START: Residential Advisor -->
-          <div class="flex flex-col gap-y-1">
+          <div x-cloak x-show="version === '2'" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Residential Advisor (RA)</p>
                 <a href="https://reslife.okstate.edu" target="_blank" class="italic"> Housing and Residential Life </a>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">August 2019 - March 2020</p>
                 <p class="xs:hidden">Aug. '19 - March '20</p>
                 <p>Stillwater, OK</p>
@@ -226,7 +277,7 @@
                 <p class="font-bold">Summer Camp Counselor</p>
                 <a href="https://www.cadence-education.com/locations/ca/valencia/651" target="_blank" class="italic"> Cadence Academy (Sunshine) </a>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">June 2019 - August 2019</p>
                 <p class="xs:hidden">June '19 - Aug. '19</p>
                 <p>Valencia, CA</p>
@@ -242,13 +293,13 @@
           </div>
           <!-- END: Summer Camp Counselor -->
           <!-- START: Intramural Sports Supervisor -->
-          <div class="flex flex-col gap-y-1">
+          <div x-cloak x-show="version === '2'" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Intramural Sports Supervisor</p>
                 <a href="https://wellness.okstate.edu/competitive-sports" target="_blank" class="italic"> Department of Wellness </a>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">August 2018 - March 2020</p>
                 <p class="xs:hidden">Aug. '18 - March '20</p>
                 <p>Stillwater, OK</p>
@@ -281,7 +332,7 @@
                 <p class="font-bold">National Flag Football Official</p>
                 <a href="https://nirsa.net/" target="_blank" class="italic"> National Intramural-Recreational Sports Association (NIRSA) </a>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">January 2020</p>
                 <p class="xs:hidden">Jan. '20</p>
               </div>
@@ -322,9 +373,9 @@
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Blockey Hockey</p>
-                <p class="italic"> Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, Github Pages </p>
+                <p class="italic"> Technologies: Angular, TypeScript, HTML, CSS, Java, REST, MySQL, GitHub Pages </p>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">Since December 2014</p>
                 <p class="xs:hidden">Since Dec. '14</p>
               </div>
@@ -355,7 +406,7 @@
                   <a href="https://github.com/tiberiuzuld/angular-gridster2" target="_blank">Gridster API</a>
                 </p>
               </div>
-              <div class="flex flex-col text-right min-w-max">
+              <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">August - November 2021</p>
                 <p class="xs:hidden">Aug. - Nov. '21</p>
               </div>
