--- a/resume/index.html
+++ b/resume/index.html
@@ -97,7 +97,7 @@
       <section x-cloak x-show="version === '1'" id="related-courses">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">Related Courses</h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
+          <ul class="ml-4 w-full list-disc columns-2 gap-x-20 print:gap-x-16">
             <li class="min-w-max">
               <span class="hidden min-w-max xs:inline">Object-Oriented Programming</span>
               <span class="xs:hidden">Object Oriented Program.</span>
@@ -162,7 +162,7 @@
       <section x-cloak x-show="version === '1'" id="technical-skills">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">Technical Skills</h2>
         <div class="flex flex-col gap-y-1.5">
-          <ul class="ml-4 w-full list-disc columns-2 gap-x-20">
+          <ul class="ml-4 w-full list-disc columns-2 gap-x-20 print:gap-x-16">
             <li>
               <span class="font-bold">Languages:</span>
               <a href="https://www.java.com" target="_blank">Java,</a>
